dataset1235/2025-2/805158916/users/2488736387/executions/71079933_291286518.log
== RUN (2025-08-13 15:25:02)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
print("11")
# Impressao do dobro do numero
print(num*dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num*dobro)
              ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num*dobro)
              ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num*dobro)
              ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num*dobro)
              ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num*dobro)
              ^^^^^
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:22:55)
-- CODE: 
# Use este codigo como ponto de partida
print("numero")
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
Texto
# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Texto
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Texto
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Texto
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Texto
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Texto
NameError: name 'Texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:19:45)
-- CODE: 
# Use este codigo como ponto de partida
print("imprima o dobro")
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
Texto:
# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 5
    Texto:
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 5
    Texto:
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 5
    Texto:
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 5
    Texto:
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 5
    Texto:
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:22:46)
-- CODE: 
# Use este codigo como ponto de partida
print("numero")
# Leitura de valores de entrada e conversao para inteiro
num = input("Digite o numero:"))
Texto
# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = input("Digite o numero:"))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = input("Digite o numero:"))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = input("Digite o numero:"))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = input("Digite o numero:"))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = input("Digite o numero:"))
                                   ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:20:42)
-- CODE: 
# Use este codigo como ponto de partida
print(*)
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
Texto
# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 2
    print(*)
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 2
    print(*)
           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 2
    print(*)
           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 2
    print(*)
           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 2
    print(*)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:20:30)
-- CODE: 
# Use este codigo como ponto de partida
print(numero_inteiro)
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
Texto
# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(numero_inteiro)
          ^^^^^^^^^^^^^^
NameError: name 'numero_inteiro' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(numero_inteiro)
          ^^^^^^^^^^^^^^
NameError: name 'numero_inteiro' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(numero_inteiro)
          ^^^^^^^^^^^^^^
NameError: name 'numero_inteiro' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(numero_inteiro)
          ^^^^^^^^^^^^^^
NameError: name 'numero_inteiro' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(numero_inteiro)
          ^^^^^^^^^^^^^^
NameError: name 'numero_inteiro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:19:58)
-- CODE: 
# Use este codigo como ponto de partida
print("imprima o dobro")
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
Texto
# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Texto
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Texto
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Texto
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Texto
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Texto
NameError: name 'Texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:23:45)
-- CODE: 
# Use este codigo como ponto de partida
print(escreba)
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
Texto
# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(escreba)
          ^^^^^^^
NameError: name 'escreba' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(escreba)
          ^^^^^^^
NameError: name 'escreba' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(escreba)
          ^^^^^^^
NameError: name 'escreba' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(escreba)
          ^^^^^^^
NameError: name 'escreba' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(escreba)
          ^^^^^^^
NameError: name 'escreba' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:17:09)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 13:50:02)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
print("11")
# Impressao do dobro do numero
print(num*dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num*dobro)
              ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num*dobro)
              ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num*dobro)
              ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num*dobro)
              ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num*dobro)
              ^^^^^
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:20:23)
-- CODE: 
# Use este codigo como ponto de partida
print(numero inteiro)
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
Texto
# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 2
    print(numero inteiro)
          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 2
    print(numero inteiro)
          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 2
    print(numero inteiro)
          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 2
    print(numero inteiro)
          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 2
    print(numero inteiro)
          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:24:49)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
print("11")
# Impressao do dobro do numero
print(num * dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num * dobro)
                ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num * dobro)
                ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num * dobro)
                ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num * dobro)
                ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num * dobro)
                ^^^^^
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:19:19)
-- CODE: 
# Use este codigo como ponto de partida
print("imprima o dobro")
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:17:02)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:24:43)
-- CODE: 
# Use este codigo como ponto de partida
print(
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
print("11")
# Impressao do dobro do numero
print(num * dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 2
    print(
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 2
    print(
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 2
    print(
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 2
    print(
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 2
    print(
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:19:49)
-- CODE: 
# Use este codigo como ponto de partida
print("imprima o dobro")
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
Texto
# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Texto
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Texto
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Texto
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Texto
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Texto
NameError: name 'Texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:23:44)
-- CODE: 
# Use este codigo como ponto de partida
print(escreba)
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
Texto
# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(escreba)
          ^^^^^^^
NameError: name 'escreba' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(escreba)
          ^^^^^^^
NameError: name 'escreba' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(escreba)
          ^^^^^^^
NameError: name 'escreba' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(escreba)
          ^^^^^^^
NameError: name 'escreba' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(escreba)
          ^^^^^^^
NameError: name 'escreba' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
